examples/tls-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-ingress
  labels:
    example: tls-ingress
spec:
  selector:
    example: tls-ingress
  type: LoadBalancer
  ports:
  - port: 80
