examples/tls-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.dev
    secretName: tls-ingress
  rules:
  - host: app.dev
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: tls-ingress
            port:
              number: 80
